--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,15 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width initial-scale=1.0">
+          content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Browser extension manager UI</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon/favicon.png">
 </head>
@@ -24,9 +25,6 @@
 
         <div class="header__theme-toggle">
             <change-theme-component></change-theme-component>
-<!--            <button class="theme-toggle">-->
-<!--                <svg-loader-component src="./assets/images/icons/icon-sun.svg"></svg-loader-component>-->
-<!--            </button>-->
         </div>
     </header>
 
